third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_reference_to_wrong_resource.exp

Diagnostics:
error: invalid call of `move_to`: expected `M::R` but found `M::X` for argument 2
  ┌─ tests/checking/typing/v1-signer/move_to_reference_to_wrong_resource.move:5:23
  │
5 │         move_to<R>(s, X { f: false })
  │                       ^^^^^^^^^^^^^^

error: invalid call of `move_to`: expected `N::X<bool>` but found `N::R<bool>` for argument 2
   ┌─ tests/checking/typing/v1-signer/move_to_reference_to_wrong_resource.move:16:34
   │
16 │         () = move_to<X<bool>>(s, R { f: false })
   │                                  ^^^^^^^^^^^^^^
